--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 Hello yes,
 
-run export SLACK_BOT_TOKEN='TOKEN' in terminal, then
-python bubfactsbot.py will start the bot
+First, install the slack client by running `pip install slackclient`
+Then run `export SLACK_BOT_TOKEN='TOKEN'` in terminal to add your OAuth token.
+Lastly, `python bubfactsbot.py` will start the bot
+
+Written in Song by Joel Reske
